--- a/Docs/UserGuide/tradedata.tex
+++ b/Docs/UserGuide/tradedata.tex
@@ -441,8 +441,10 @@ specification.
         <Payer>false</Payer>
         ...
         <ZeroCouponFixedLegData>
-            <Rate>0.02</Rate>
-            <Years>5</Years>
+            <Rates>
+                <Rate>0.02</Rate>
+            </Rates>
+            <Compounding>Simple</Compounding>
         </ZeroCouponFixedLegData>
       </LegData>
     </SwapData>
