Added all indexes to the fixingdata.tex from indexparser.cpp

--- a/Docs/UserGuide/fixingdata.tex
+++ b/Docs/UserGuide/fixingdata.tex
@@ -79,11 +79,14 @@ used (Table \ref{tab:IR_indices}).
 \hline
 \textbf{Index Component} & \textbf{Allowable Values} \\
 \hline
-CCY-INDEX                & \textit{\begin{tabular}[c]{@{}l@{}}EUR-EONIA\\ EUR-EURIBOR\\ EUR-LIBOR\\ USD-FedFunds\\ 
-USD-LIBOR\\ GBP-SONIA\\ GBP-LIBOR\\ JPY-TONAR\\ JPY-LIBOR\\ CHF-LIBOR\\ CHF-TOIS\\ AUD-LIBOR\\ AUD-BBSW\\ CAD-CDOR\\ 
-CAD-BA\\ CAD-LIBOR\\ SEK-STIBOR\\ SEK-LIBOR\\ DKK-LIBOR\\ DKK-CIBOR\\ SGD-SIBOR\\ HKD-HIBOR \\CZK-PRIBOR\\ HUF-BUBOR\\ 
-IDR-IDRFIX\\ INR-MIFOR\\ JPY-TIBOR\\ KRW-KORIBOR\\ MXN-TIIE\\ MYR-KLIBOR\\ NOK-NIBOR\\ NZD-BKBM\\ PLN-WIBOR\\ 
-SEK-STIBOR\\ SGD-SOR\\ SKK-BRIBOR\\ TWD-TAIBOR\\ ZAR-JIBAR \end{tabular}} \\ \hline
+CCY-INDEX                & \textit{\begin{tabular}[c]{@{}l@{}}EUR-EONIA\\ EUR-EURIB\\ EUR-EURIBOR\\ EUR-LIBOR\\ USD-FedFunds\\ USD-SIFMA\\ 
+USD-LIBOR\\ GBP-SONIA\\ GBP-LIBOR\\ JPY-TONAR\\ JPY-LIBOR\\ CHF-LIBOR\\ CHF-SARON \\CHF-TOIS\\ 
+AUD-AONIA\\ AUD-LIBOR\\ AUD-BBSW\\ BRL-CDI\\ CAD-BA\\ CAD-CDOR\\ CAD-CORRA\\
+CAD-LIBOR\\ CLP-CAMARA\\ COP-IBR\\ CZK-PRIBOR\\ DEM-LIBOR\\ DKK-CIBOR\\ DKK-DKKOIS\\ DKK-LIBOR\\ DKK-TNR\\ 
+HKD-HIBOR \\ HUF-BUBOR\\ IDR-IDRFIX\\ INR-MIFOR\\ JPY-TIBOR\\ KRW-KORIBOR\\ MXN-TIIE\\ MYR-KLIBOR\\ 
+NOK-NIBOR\\ NOK-NOWA\\ NZD-BKBM\\ NZD-OCR\\ PHP-PHIREF\\ PLN-POLONIA\\ PLN-WIBOR\\ 
+RUB-MOSPRIME\\ SEK-LIBOR\\ SEK-SIOR\\ SEK-STIBOR\\SGD-SIBOR\\  SGD-SOR\\ SKK-BRIBOR\\ 
+THB-BIBOR\\ TWD-TAIBOR\\ ZAR-JIBAR \end{tabular}} \\ \hline
 TENOR                    & An integer followed by \emph{D, W, M or Y} \\
 \hline
 % \multicolumn{2}{|l|}{\textbf{IR Index on alternative IndexTenor form:}}                                                                                                                                                                                                                                        \\ \hline
