corrected label zerolegdata

--- a/Docs/UserGuide/tradecomponents.tex
+++ b/Docs/UserGuide/tradecomponents.tex
@@ -1151,7 +1151,7 @@ Allowable values:  \emph{true, false}
 \end{listing}
 
 \subsubsection{ZeroCouponFixed Leg Data}
-\label{ss:yylegdata}
+\label{ss:zerolegdata}
 
 Listing \ref{lst:zerolegdata} shows an example for a leg of type Zero Coupon Fixed. The ZeroCouponFixedLegData block contains the following
 elements:
