--- a/Docs/UserGuide/tradecomponents.tex
+++ b/Docs/UserGuide/tradecomponents.tex
@@ -204,7 +204,7 @@ The meanings and allowable values of the elements in the \lstinline!LegData! nod
 \item LegType:  Determines which of the available sub-nodes must be
   used. 
 
-Allowable values:  \emph{Fixed, Floating, Cashflow, CMS, CMSSpread, DigitalCMSSpread, Equity, YY, CPI}
+Allowable values:  \emph{Fixed, Floating, Cashflow, CMS, CMSSpread, DigitalCMSSpread, Equity, YY, CPI, ZeroCouponFixed, FormulaBased}
 
 \item Payer:  The flows of the leg are paid to the counterparty if
   \emph{true}, and received if \emph{false}.  
@@ -367,6 +367,8 @@ outlined in section \ref{ss:floatingleg_data} Floating Leg Data and Spreads.
   outlined in section \ref{ss:yylegdata}.
 \item ZeroCouponFixedLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{ZeroCouponFixed}. It is
   outlined in section \ref{ss:zerolegdata}.
+  \item FormulaBasedLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{FormulaBased}. It is
+  outlined in section \ref{ss:formulalegdata}.
 \end{itemize}
 
 \subsubsection{Schedule Data (Rules and Dates)}\label{ss:schedule_data}
