--- a/Docs/UserGuide/conventions.tex
+++ b/Docs/UserGuide/conventions.tex
@@ -186,6 +186,7 @@ node is shown in Listing \ref{lst:ois_conventions}.
   <FixedConvention> </FixedConvention>
   <FixedPaymentConvention> </FixedPaymentConvention>
   <Rule> </Rule>
+  <PaymentCalendar> </PaymentCalendar>
 </OIS>
 \end{minted}
 \caption{OIS conventions}
@@ -209,6 +210,8 @@ to 0.
 defaults to \emph{Following}.
 \item Rule [Optional]: The rule used for generating the OIS dates schedule i.e.\ \emph{Backward} or \emph{Forward}. If
 not provided, this defaults to \emph{Backward}.
+\item PaymentCalendar [Optional]: The business day calendar used for determining coupon payment dates.
+If not specified, this defaults to the fixing calendar defined on the overnight index.
 \end{itemize}
 
 %- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -441,6 +444,8 @@ structure of this node is shown in Listing \ref{lst:xccy_basis_conventions}.
   <FlatIndex> </FlatIndex>
   <SpreadIndex> </SpreadIndex>
   <EOM> </EOM>
+  <IsResettable> </IsResettable>
+  <FlatIndexIsResettable> </FlatIndexIsResettable>>
 </CrossCurrencyBasis>
 \end{minted}
 \caption{Cross currency basis swap conventions}
@@ -456,8 +461,9 @@ SettlementDays above.
 \item RollConvention: The roll convention for both legs.
 \item FlatIndex: The name of the index on the leg that does not have the cross currency basis spread.
 \item SpreadIndex: The name of the index on the leg that has the cross currency basis spread.
-\item EOM [Optional]: \emph{True} if the end of month convention is to be used when generating the schedule on both legs
-and \emph{False} if not. If not provided, it defaults to \emph{False}.
+\item EOM [Optional]: \emph{True} if the end of month convention is to be used when generating the schedule on both legs, and \emph{False} if not. If not provided, it defaults to \emph{False}.
+\item IsResettable [Optional]: \emph{True} if the swap is mark-to-market resetting, and \emph{False} otherwise. If not provided, it defaults to \emph{False}.
+\item FlatIndexIsResettable [Optional]: \emph{True} if it is the notional on the leg paying the flat index that resets, and \emph{False} otherwise. If not provided, it defaults to \emph{True}.
 \end{itemize}
 
 %- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -499,4 +505,41 @@ The meaning of the elements is as follows:
 \item AdjustInfObsDates: Flag indicating whether index observation dates should be adjusted or not.
 \item InfCalendar: The calendar for the inflation leg of the swap.
 \item InfConvention: The rolling convention for the inflation leg of the swap.
+\end{itemize}
+
+%- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+\subsubsection{CMS Spread Option Conventions}
+%- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+A node with name \emph{InflationSwap} is used to store conventions for zero or year on year inflation swap quotes. The
+structure of this node is shown in Listing \ref{lst:inflation_conventions}
+
+\begin{listing}[H]
+%\hrule\medskip
+\begin{minted}[fontsize=\footnotesize]{xml}
+  <CmsSpreadOption>
+    <Id>EUR-CMS-10Y-2Y-CONVENTION</Id>
+    <ForwardStart>0M</ForwardStart>
+    <SpotDays>2D</SpotDays>
+    <SwapTenor>3M</SwapTenor>
+    <FixingDays>2</FixingDays>
+    <Calendar>TARGET</Calendar>
+    <DayCounter>A360</DayCounter>
+    <RollConvention>MF</RollConvention>
+  </CmsSpreadOption>
+\end{minted}
+\caption{Inflation swap conventions}
+\label{lst:inflation_conventions}
+\end{listing}
+
+The meaning of the elements is as follows:
+
+\begin{itemize}
+\item ForwardStart: The calendar for the fixed rate leg of the swap.
+\item SpotDays: The number of business days to spot for the CMS Spread Index.
+\item SwapTenor: The frequency of payments on the CMS Spread leg.
+\item FixingDays: The number of fixing days.
+\item Calendar: The calendar for the CMS Spread leg.
+\item DayCounter: The day counter for the CMS Spread leg.
+\item RollConvention: The rolling convention for the CMS Spread Leg.
 \end{itemize}
