update user guide and news

--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -99,7 +99,8 @@
 %\date{28 April 2017}
 %\date{7 December 2017}
 %\date{13 June 2018}
-\date{20 March 2018}
+%\date{20 March 2018}
+\date{28 May 2019}
 \maketitle
 
 \newpage
@@ -115,7 +116,7 @@ Date & Author & Comment \\
 7 October 2016 & Quaternion & initial release\\
 28 April 2017 & Quaternion  & updates for release 2\\
 7 December 2017 & Quaternion & updates for release 3\\
-20 March 2019 & Quaternion & updates for release 4\\
+28 May 2019 & Quaternion & updates for release 4\\
 \hline
 \end{supertabular}
 \end{center}
@@ -335,7 +336,7 @@ EXAMPLES
 \bigskip
 USER GUIDE
 \begin{itemize}
-\item Extended to 186 pages
+\item Extended to 194 pages
 \end{itemize}
 
 \bigskip
