removed optional from Spreads

--- a/Docs/UserGuide/tradecomponents/floatinglegdata.tex
+++ b/Docs/UserGuide/tradecomponents/floatinglegdata.tex
@@ -74,7 +74,7 @@ Allowable values:  \emph{true, false}. Defaults to \emph{false} if left blank or
 
 Allowable values:  Positive integers.  Defaults to \emph{0} if left blank or omitted.
 
-\item Spreads [Optional]: This node contains child elements of type
+\item Spreads: This node contains child elements of type
   \lstinline!Spread!. If the spread is constant over the life of the
   floating leg, only one spread value should be entered. If two or more
   coupons have different spreads, multiple spread values are required,
