added that American style is suported so the document is consistent

--- a/Docs/UserGuide/tradedata/fxoption.tex
+++ b/Docs/UserGuide/tradedata/fxoption.tex
@@ -27,7 +27,7 @@ The meanings and allowable values of the elements in the \lstinline!FXOptionData
 
 \begin{itemize}
 \item OptionData: This is a trade component sub-node outlined in section \ref{ss:option_data}. Note that the
-  FX option type allows for \emph{European} option style only.
+  FX option type allows for \emph{European} and \emph{American} option styles only.
 
 \item BoughtCurrency: The bought currency of the FX option.  
 
